@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.4.0
 
-6 July 2017
+18 July 2017
 
 
 1. Introduction
@@ -23,6 +23,7 @@ The following classes have been renamed:
 The following methods have been added:
 - GSkyRegion::overlaps(GSkyRegions&)
 - GSkyMap::overlaps(GSkyRegion&)
+- GModelTemporalPhaseCurve::normalise()
 
 The following methods have been removed:
 - n.a.
@@ -64,7 +65,10 @@ None
 
 8. Model module
 ---------------
-None
+The GModelTemporalPhaseCurve models are now normalised by default unless a
+normalize="0" attribute is explicitly added into the XML file. Thus the spectral
+component of a sky model with a GModelTemporalPhaseCurve temporal component now
+gives the phase-averaged flux (#2154).
 
 
 9. Numerics module
